<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/createAccountTV"
            style="@style/RegularTextStyle"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/enter_an_account_id_to_use_with_your_near_account_your_account_id_will_be_used_for_all_near_operations_including_sending_and_receiving_assets"
            android:textColor="@color/gray_3" />

        <TextView
            android:id="@+id/fullNameHint"
            style="@style/RegularTextStyle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/full_name"
            android:textAllCaps="true"
            android:textColor="@color/gray_3" />

        <EditText
            android:id="@+id/fullNameInput"
            style="@style/EditTextInputStyle"
            android:layout_marginTop="8dp"
            android:hint="@string/ex_john_doe" />

        <TextView
            android:id="@+id/fullNameError"
            style="@style/ErrorStyle"
            android:text="@string/this_field_is_required_to_continue"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/walletInfoHint"
                style="@style/RegularTextStyle"
                android:layout_gravity="center"
                android:text="@string/wallet_id"
                android:textAllCaps="true"
                android:textColor="@color/gray_3" />


            <ImageView
                android:id="@+id/walletInfoIV"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:background="@drawable/ripple_simple_bg"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/ic_info" />

        </LinearLayout>

        <EditText
            android:id="@+id/walletIDInput"
            style="@style/EditTextInputStyle"
            android:layout_marginTop="8dp"
            android:hint="@string/yourname_near" />

        <TextView
            android:id="@+id/walletIDError"
            style="@style/ErrorStyle"
            android:text="@string/this_field_is_required_to_continue"
            android:visibility="gone" />

        <TextView
            android:id="@+id/createAnAccountBtn"
            style="@style/ActionButton"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/create_an_account"
            app:drawableEndCompat="@drawable/ic_arrow_forward" />

        <TextView
            android:id="@+id/agreementTV"
            style="@style/RegularTextStyle"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/blue_1"
            android:gravity="center"
            android:text="@string/t_and_c_create_wallet_privacy_policy_text"
            android:textColor="@color/gray_3"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@color/gray_4" />

        <TextView
            style="@style/RegularTextStyle"
            android:layout_gravity="center"
            android:text="@string/already_have_near_account_" />

        <TextView
            android:id="@+id/loginBtn"
            style="@style/ActionButton"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue_1"
            android:gravity="center"
            android:text="@string/login_with_near"
            app:drawableEndCompat="@drawable/ic_arrow_forward" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>