<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/bannerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_home_banner"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_logo" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/bannerLayout">

            <RadioGroup
                android:id="@+id/signUpTypeRG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/emailOption"
                    style="@style/TextRadioButtonStyle"
                    android:layout_marginEnd="4dp"
                    android:checked="true"
                    android:text="@string/email" />

                <RadioButton
                    android:id="@+id/phoneOption"
                    style="@style/TextRadioButtonStyle"
                    android:layout_marginStart="4dp"
                    android:text="@string/phone" />

            </RadioGroup>

            <EditText
                android:id="@+id/signUpInput"
                style="@style/EditTextInputStyle"
                android:layout_marginTop="8dp"
                android:hint="@string/email_address" />

            <TextView
                android:id="@+id/signUpFieldError"
                style="@style/ErrorStyle"
                android:text="@string/this_field_is_required_to_continue"
                android:visibility="gone" />

            <TextView
                android:id="@+id/signUpBtn"
                style="@style/ActionButton"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/get_started"
                app:drawableEndCompat="@drawable/ic_arrow_forward" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:background="@color/gray_4" />

            <TextView
                style="@style/RegularTextStyle"
                android:layout_gravity="center"
                android:text="@string/already_have_near_account_" />

            <EditText
                android:id="@+id/walletInput"
                style="@style/EditTextInputStyle"
                android:layout_marginTop="8dp"
                android:hint="@string/walletname_near" />

            <TextView
                android:id="@+id/nearWalletError"
                style="@style/ErrorStyle"
                android:text="@string/this_field_is_required_to_continue"
                android:visibility="gone" />

            <TextView
                android:id="@+id/loginBtn"
                style="@style/ActionButton"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/blue_1"
                android:gravity="center"
                android:text="@string/login"
                app:drawableEndCompat="@drawable/ic_arrow_forward" />

            <TextView
                android:id="@+id/footerTV"
                style="@style/RegularTextStyle"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/blue_1"
                android:gravity="center"
                android:text="@string/t_and_c_privacy_policy_text" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>